--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "mongoose": "^5.9.13",
     "nodemon": "^2.0.3",
     "request": "^2.88.2",
-    "request-promise": "^4.2.5"
+    "request-promise": "^4.2.5",
+    "validator": "^13.0.0"
   },
   "devDependencies": {},
   "scripts": {
