--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
+    "node-cron": "^2.0.3",
     "nodemon": "^2.0.3",
     "request": "^2.88.2"
   },
