--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mysql": "^2.18.1",
     "node-cron": "^2.0.3",
     "nodemon": "^2.0.3",
+    "puppeteer": "^3.0.4",
     "request": "^2.88.2"
   },
   "devDependencies": {},
