--- a/package.json
+++ b/package.json
@@ -2,14 +2,10 @@
   "name": "playground",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "dependencies": {
-    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mysql": "^2.18.1",
-    "node-cron": "^2.0.3",
-    "nodemon": "^2.0.3",
     "puppeteer": "^3.0.4",
     "request": "^2.88.2"
   },
