--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "puppeteer": "^3.0.4",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "typeorm": "^0.2.24"
   },
   "devDependencies": {},
   "scripts": {
