--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mysql": "^2.18.1",
     "puppeteer": "^3.0.4",
     "request": "^2.88.2",
+    "request-promise-native": "^1.0.8",
     "typeorm": "^0.2.24"
   },
   "devDependencies": {},
