Section 11 Robots TxT Parsing

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "mongoose": "^5.9.14",
     "puppeteer": "^3.0.4",
     "request": "^2.88.2",
-    "request-promise": "^4.2.5"
+    "request-promise": "^4.2.5",
+    "robots-parser": "^2.1.1"
   },
   "devDependencies": {},
   "scripts": {
