--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.13",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.3",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
