--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nodemon": "^2.0.3",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
+    "sharp": "^0.25.3",
     "validator": "^13.0.0"
   },
   "devDependencies": {},
