--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "sharp": "^0.25.3",
     "validator": "^13.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "env-cmd": "^10.1.0"
+  },
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
   },
   "repository": {
     "type": "git",
