--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.17.1",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.14",
+    "nightmare": "^3.0.2",
     "puppeteer": "^3.0.4",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
