--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Scrap HTML Tables with Cheerio and Request",
   "main": "app.js",
   "dependencies": {
+    "apollo-server": "^2.13.1",
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "mongodb": "^3.5.7",
